syntax = "proto3";

package int64;

option go_package = "xgo/tests/pb/pbinvalid";

//import "google/protobuf/any.proto";
//import "google/protobuf/duration.proto";
//import "google/protobuf/timestamp.proto";
//
//import "tests/proto/module/external.proto";

import "proto/json.proto";

message Int6403 {
  int64 field03 = 3 [ (json.field) = { format: { sint32: { } } } ];
}
